@@ -65,6 +65,19 @@ define(["snmd-core/js/SVGWidget", "js-logger", "jquery", "jquery.svg", "jquery.s
         svg.root().setAttribute('width', '100%');
         svg.root().setAttribute('height', '100%');
 
+        /* Remove 'fill' style from any SVG element with snmd-fill-* class. */
+        var clrFill = function () {
+            this.style.fill = "";
+        };
+        $('[class^="snmd-fill-"]', svg.root()).each(clrFill).children().each(clrFill);
+
+        /* Remove 'sroke' style from any SVG element with snmd-sroke-* class. */
+        var clrStroke = function () {
+            this.style.stroke = "";
+        };
+        $('[class^="snmd-stroke-"]', svg.root()).each(clrStroke).children().each(clrStroke);
+
+        /* Find and handle widget elements. */
         $('[id^="snmd_"]', svg.root()).each(function () {
             var json;
             try {
